--- a/statement.html
+++ b/statement.html
@@ -75,7 +75,7 @@
                     &emsp;&emsp;问题二：网页顶部的图集如何实现定时轮播效果并能够通过鼠标点击实现切换图片
                 </p>
                 <p>
-                    &emsp;&emsp;解决方法：通过JavaScript DOM 获取需要实现轮播动画的图片，根据图片数量创建相应的圆点并为每个圆点绑定自定义属性，通过事件委托给圆点切换区域绑定点击事件，根据圆点的自定义属性值进行相应的切换，最后通过定时器设置图片自动切换的效果。
+                    &emsp;&emsp;解决方法：通过JavaScript DOM 获取需要实现轮播动画的图片，根据图片数量创建相应的圆点并为每个圆点绑定自定义属性，通过事件委托给圆点切换区域绑定onmouseover事件，根据圆点的自定义属性值进行相应的切换，最后通过定时器设置图片自动切换的效果。
                 </p>
                 <br>
                 <p>
